--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
 
       <a href="#"><i class="fa fa-shopping-cart brand-logo right mt-2"  href="#details-7" class="mt-2 container-fluid btn green-body white-text"  data-toggle="modal" data-target="#details-7" onclick="" style="font-size: 40px;color: #fff;position: fixed;top: 0px;right: 20px; z-index: 20000;"></i></a>
-      <?php include 'pop.php'; ?>
+      <?php include 'pop.html'; ?>
 
 
   <div id="test1" class="container-fluid">
-      <?php include 'home-first-section.php'; ?>
-      <?php include 'quick-order.php'; ?>
+      <?php include 'home-first-section.html'; ?>
+      <?php include 'quick-order.html'; ?>
 
-      <?php include 'home-second-section.php'; ?>
+      <?php include 'home-second-section.html'; ?>
 
       
-      <?php include 'home-third-section.php'; ?>
+      <?php include 'home-third-section.html'; ?>
 
-      <?php include 'home-fourth-section.php'; ?>
+      <?php include 'home-fourth-section.html'; ?>
   </div>
 
 
@@ -45,7 +45,7 @@
 
 
   <div id="test2" class="green-body container-fluid">
-      <?php include 'lab-content.php'; ?>
+      <?php include 'lab-content.html'; ?>
   </div>
 
 
@@ -53,10 +53,10 @@
 
 
   <div id="test3" class="green-body container-fluid ">
-    <?php include 'storenav.php'; ?>
-    <?php include 'storenav-emulsion.php'; ?>
-    <!-- <?php include 'storenav-texcote.php'; ?>
-    <?php include 'storenav-gloss.php'; ?> -->
+    <?php include 'storenav.html'; ?>
+    <?php include 'storenav-emulsion.html'; ?>
+    <!-- <?php include 'storenav-texcote.html'; ?>
+    <?php include 'storenav-gloss.html'; ?> -->
   </div>
 
 
@@ -208,8 +208,8 @@
 
 
 <?php
-  include 'nav.php';
-  include 'footer.php';
+  include 'nav.html';
+  include 'footer.html';
 ?>
 
 </script>
