--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+<?php
+define('CDN', 'https://cdn.yourwebsite.com/');
+?>
 <! DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <title>Sparkle | Home</title>
+    <!-- (generated server side from less/style.less) -->
+    <link rel='stylesheet' href='<?php echo CDN ?>css/style.css' /> 
+    <script type='text/javascript' src='<?php echo CDN ?>js/script.js'></script>
     <link href="sparkle-min.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/materialize.min.css"> -->
